Quick'n'dirty fix for text overlap with the new grid component

--- a/docs/.vuepress/styles/strapi-custom-blocks.styl
+++ b/docs/.vuepress/styles/strapi-custom-blocks.styl
@@ -209,6 +209,7 @@
       display: grid
       grid-template: 1fr 50% / 1fr 50%
       grid-column-gap: 40px
+      margin-bottom: 20px
 
     > .custom-block-title
       grid-row: 1
